--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+lib64
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -109,6 +110,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+bin
 
 # Spyder project settings
 .spyderproject
@@ -129,3 +131,4 @@ dmypy.json
 .pyre/
 .idea/*
 example.py
+*.cfg
