--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+bin
+lib64
 
 # Spyder project settings
 .spyderproject
@@ -129,3 +131,5 @@ dmypy.json
 .pyre/
 .idea/*
 example.py
+*.txt
+*.cfg
